[package]
name = "websocketTester"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.26.2", features = [ "native-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3.31"
async-trait = "0.1.87"
rand = "0.8" 